--- a/app/styles/modules/_links.scss
+++ b/app/styles/modules/_links.scss
@@ -1,7 +1,7 @@
 .link-layout{
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 0.5rem);
   overflow: hidden;
   background-color: rgba(255, 55, 255, 1);;
   z-index: 33;
