--- a/app/styles/partials/_transitions.scss
+++ b/app/styles/partials/_transitions.scss
@@ -14,7 +14,7 @@
 
 
 .hfade-transition {
-  transition: 1.4s cubic-bezier(.77,0,.175,1).1s;
+  transition: .4s cubic-bezier(.77,0,.175,1).1s;
 }
 
 .hfade-enter {
