a lot of bugfixes removes, plus a bit of responsive ref.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,7 @@
 //Partials with font dependency
 @import "partials/constants";
 // Modules and Variables
+@import "modules/about";
 @import "modules/smooth";
 @import "modules/links";
 @import "modules/home";
