--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -16,7 +16,7 @@
 #wrapper{
   // @extend %full-size;
   position:relative;
-  height: 100% !important;
+  height: 100%;
   border-color: $white;
   border-style: solid;
   border-bottom: 0;
