--- a/app/styles/modules/_project.scss
+++ b/app/styles/modules/_project.scss
@@ -115,24 +115,6 @@ article{
       display: table;
     }
 
-    .info-work {
-      position: relative;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-      float: left;
-      clear: none;
-      width: 50%;
-      margin-left: 45%;
-      margin-top: 1rem;
-
-        .mono-title {
-            position: absolute;
-            // bottom: 35px;
-            left: -3rem;
-            line-height: 1;
-        }
-    }
-
-
       .link-detail {
         float: left;
         clear: none;
@@ -201,6 +183,10 @@ article{
                   margin-left: 0;
                   margin-right: 4.56853%;
 
+                  @include breakpoint(small only) {
+                    display: none;
+                  }
+
                   .detail .mono-title {
                     padding-top: 23px;
                     display: block;
@@ -230,20 +216,50 @@ article{
   position: absolute;
 }
 
+.info-work {
+  position: relative;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+  float: left;
+  clear: none;
+  width: 50%;
+  margin-left: 45%;
+  margin-top: 1rem;
+
+  @include breakpoint(small only) {
+    margin-left: 25%;
+  }
+
+    .mono-title {
+        position: absolute;
+        // bottom: 35px;
+        left: -3rem;
+        line-height: 1;
+    }
+}
+
+
 .thetitle {
   // @include use-normal-font($extraBold, 400, 6.25rem, 0, rgb(255, 255, 255));
   // top:50%;
   // left: 50%;
   // transform: translateX(-50%) translateY(-50%);
   // text-decoration: underline;
-  @include use-normal-font($extraBold, 400, 6.25rem, 0, rgb(255, 255, 255));
+  @include use-normal-font($extraBold, 400, 6.25rem, 0, rgb(0, 0, 0));
+  font-size: modular-scale(3, 2em, 1.234)!important;
   float: left;
   clear: none;
   width: 100%;
-  margin-left: 7%;
+  margin-left: 6%;
   margin-right: 3%;
   transition: all .3s cubic-bezier(.615,.19,.305,.91);
   transform: translate(0, -125%);
+  line-height: 1;
+
+  @include breakpoint(small only) {
+    margin-left: 0;
+    text-align: center;
+    font-size: modular-scale(0, 2em, 1.234)!important;
+  }
 
   h2 {
     white-space: nowrap;
