--- a/app/styles/partials/_constants.scss
+++ b/app/styles/partials/_constants.scss
@@ -8,7 +8,7 @@ html body {
 body{
   width: 100%;
   color: white;
-  background: $white;
+  background: $primary;
   position: absolute;
   overflow-x: hidden;
   overflow-y: hidden;
