--- a/app/src/components/text/intro.html
+++ b/app/src/components/text/intro.html
@@ -1,7 +1,3 @@
 <span>
-  <div class="welcomeTxt">
-    <span>
-      Hej my name is Michael Schade and <br> I'm a passionated Interaction Design, Creative Technologist <br> and Bla Bla bLa I like this and that and welcome to my Page
-    </span>
-  </div>
-</span>
+  Hi my name is Michael Schade, I'm a interaction designer and creative technologist and I'm working at the cross boarders of Art, Design and Technology.
+</span>"
