--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 //Vendor
 @import "foundation";
 @include foundation-global-styles; // Always include the global-styles
+@include foundation-flex-classes;
 @include foundation-flex-grid;
 @import "bourbon";
 @import "typeplate";
