--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -19,7 +19,7 @@
   height: 100%;
   border-color: $white;
   border-style: solid;
-  border-bottom: 0;
+  // border-bottom: 0;
   border-width: 0.5rem;
   background-color: #DADADA;
 
