--- a/app/styles/partials/_constants.scss
+++ b/app/styles/partials/_constants.scss
@@ -49,10 +49,8 @@ a:active{
 }
 
 p {
-	text-align: justify;
-	-webkit-hyphens: auto;
-	-moz-hyphens: auto;
-	-ms-hyphens: auto;
+  color: $black;
+	text-align: justify;;
 	hyphens: auto;
 }
 
