--- a/app/styles/modules/_project.scss
+++ b/app/styles/modules/_project.scss
@@ -33,7 +33,7 @@ article{
 
 .cont-list-work {
     clear: both;
-    padding-top: 10rem;
+    padding-top: 3rem;
     padding-bottom: 10rem;
     position: relative;
     z-index: 1;
@@ -68,8 +68,8 @@ article{
         height: 100%;
         float: left;
         clear: none;
-        width: 65.66667%;
-        margin-left: 34.33333%;
+        width: 59%;
+        margin-left: 41%;
         margin-right: 3%;
         -webkit-transition: all .3s cubic-bezier(.615,.19,.305,.91);
         transition: all .3s cubic-bezier(.615,.19,.305,.91);
@@ -119,8 +119,7 @@ article{
         float: left;
         clear: none;
         width: 100%;
-        margin-left: 80%;
-        margin-right: 3%;
+        margin-left: 85%;
         position: absolute;
         height: 100%;
         top: 0;
@@ -221,7 +220,7 @@ article{
   border-bottom: 1px solid rgba(255, 255, 255, 0.4);
   float: left;
   clear: none;
-  width: 50%;
+  width: 45%;
   margin-left: 45%;
   margin-top: 1rem;
 
@@ -287,6 +286,8 @@ article{
   transform: scaleX(1.3);
   transform: scaleY(0);
   transform-origin: 50% 0;
+  // transform: translate(0,0);
+  // transform: translate(0,-3rem);
   z-index: 20;
   left: 0;
   right: 0;
@@ -301,4 +302,15 @@ article{
 
 .wk.color-10:before {
     background-color: #ffde00;
+}
+
+.headline{
+  position: relative;
+  float: right;
+  z-index: 2;
+  margin-right: 10%;
+  margin-bottom: 4rem;
+  margin-top: 3rem;
+  @include use-normal-font($extraBold, 400, 0, 0, rgb(0, 0, 0));
+  border-bottom: 6px solid rgba(255, 255, 255, 0.4);
 }
