--- a/app/styles/modules/_links.scss
+++ b/app/styles/modules/_links.scss
@@ -1,8 +1,7 @@
 .link-layout{
   position: relative;
   width: 100%;
-  height: calc(100vh - 0.5rem);
-  overflow: hidden;
+  height: 3000px;//calc(100vh - 0.5rem);
   background-color: rgba(255, 55, 255, 1);;
   z-index: 33;
 }
