animation added to projects template

--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -17,22 +17,24 @@
   // @extend %full-size;
   position:relative;
   height: 100%;
-  border-color: $white;
-  border-style: solid;
-  // border-bottom: 0;
-  border-width: 0.5rem;
+  // border-color: $white;
+  // border-style: solid;
+  // // border-bottom: 0;
+  // border-width: 0.5rem;
+  padding-left: 0.5rem;
+  padding-top: 0.5rem;
+  padding-right: 0.5rem;
+  padding-bottom: 0.5rem;
   background-color: #DADADA;
 
   @media #{$medium-up} {
-    border-width: 1rem;
+    padding-left: 1rem;
+    padding-top: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
   }
 
 }
-
-// .work.transform::after{
-//   content: "";
-//   transform: rotate(-4deg);
-// }
 
 
 .contact{
