--- a/app/styles/modules/_links.scss
+++ b/app/styles/modules/_links.scss
@@ -1,7 +1,23 @@
-.link-layout{
+.project-layout{
   position: relative;
   width: 100%;
-  height: 3000px;//calc(100vh - 0.5rem);
-  background-color: rgba(255, 55, 255, 1);;
+  height: 100%;//calc(100vh - 0.5rem);
+  background-color: #000;
   z-index: 33;
+}
+
+.project-overlay{
+  position: absolute;
+  width: 100%;
+  height: 1080px;
+  background-color: #000;
+  margin-left: 0rem;
+  margin-right: 0rem;
+  z-index: 35;
+}
+
+.project-description{
+  position: relative;
+  background-color: $black;
+  height: 100%;
 }
