--- a/app/styles/partials/_transitions.scss
+++ b/app/styles/partials/_transitions.scss
@@ -1,6 +1,6 @@
 // Global fade transition
 .fade-transition {
-  transition: 1.0s ease;
+  transition: 1.0s cubic-bezier(.77,0,.175,1).1s;
 }
 
 .fade-enter {
@@ -46,6 +46,20 @@
 
 .slide-leave{
   transform: translate3d(0, -110%, 0);
+}
+
+
+.slideUp-transition {
+  transition: transform 2.4s cubic-bezier(.77,0,.175,1).1s;
+  transform: translate3d(0, 0%, 0);
+}
+
+.slideUp-enter{
+  transform: translate3d(0, 65%, 0);
+}
+
+.slideUp-leave{
+  transform: translate3d(0, 65%, 0);
 }
 
 
