--- a/app/styles/modules/_links.scss
+++ b/app/styles/modules/_links.scss
@@ -1,7 +1,7 @@
 .project-layout{
   position: relative;
   width: 100%;
-  height: 100%;//calc(100vh - 0.5rem);
+  height: 600px;//calc(100vh - 0.5rem);
   background-color: #000;
   z-index: 33;
 }
@@ -9,7 +9,7 @@
 .project-overlay{
   position: absolute;
   width: 100%;
-  height: 1080px;
+  height: calc(100vh - 1.0rem);
   background-color: #000;
   margin-left: 0rem;
   margin-right: 0rem;
