--- a/app/styles/modules/_project.scss
+++ b/app/styles/modules/_project.scss
@@ -288,6 +288,8 @@ article{
   transform: scaleX(1.3);
   transform: scaleY(0);
   transform-origin: 50% 0;
+  top: -25%;
+  // transform: translate(0%,-2%);
   // transform: translate(0,0);
   // transform: translate(0,-3rem);
   z-index: 20;
@@ -300,7 +302,7 @@ article{
 .wk.active::before {
     content: '';
     transform: scaleY(1);
-    transform: translate(0%,-20%);
+    // transform: translate(0%,-20%);
 }
 
 .wk.color-10:before {
