--- a/app/styles/partials/_transitions.scss
+++ b/app/styles/partials/_transitions.scss
@@ -52,14 +52,15 @@
 .slideUp-transition {
   transition: transform 2.4s cubic-bezier(.77,0,.175,1).1s;
   transform: translate3d(0, 0%, 0);
+  transition-delay: 2s;
 }
 
 .slideUp-enter{
-  transform: translate3d(0, 65%, 0);
+  transform: translate3d(0, 100%, 0);
 }
 
 .slideUp-leave{
-  transform: translate3d(0, 65%, 0);
+  transform: translate3d(0, 100%, 0);
 }
 
 
