--- a/app/styles/modules/_project.scss
+++ b/app/styles/modules/_project.scss
@@ -81,7 +81,7 @@ article{
     .link-project.active{
       width: 100%;
       margin-left: 0;
-      transform: translate(0%,-20%);
+      transform: translate(0%, -25%);
     }
 
     a{
@@ -155,7 +155,7 @@ article{
         transition: all .3s cubic-bezier(.615,.19,.305,.91);
         .cont-info-work-detail {
             position: absolute;
-            top: 0;
+            top: 25%;
             width: 100%;
 
 
@@ -170,13 +170,8 @@ article{
               color: black;
 
               .detail {
-                  -webkit-transform: translate(0,16px);
-                  -ms-transform: translate(0,16px);
-                  transform: translate(0,16px);
-                  -webkit-transition: all .3s cubic-bezier(.615,.19,.305,.91);
+                  // transform: translate(0, 12.5%);
                   transition: all .3s cubic-bezier(.615,.19,.305,.91);
-                  -webkit-transition-timing-function: cubic-bezier(.615,.19,.305,.91);
-                  transition-timing-function: cubic-bezier(.615,.19,.305,.91);
                   float: left;
                   clear: none;
                   width: 100%;
@@ -214,7 +209,7 @@ article{
 .info-work-detail.active{
   height: 100%;
   position: absolute;
-  transform: translate(0%,-12.5%);
+  transform: translate(0, -25%);
 }
 
 .info-work {
@@ -253,7 +248,7 @@ article{
   margin-left: 6%;
   margin-right: 3%;
   transition: all .3s cubic-bezier(.615,.19,.305,.91);
-  transform: translate(0, -125%);
+  transform: translate(0, -130%);
   line-height: 1;
 
   @include breakpoint(medium down) {
@@ -272,7 +267,7 @@ article{
 
 
 .thetitle.active{
-  transform: translate(0, 12.5%);
+  transform: translate(0, -5%);
 }
 
 
@@ -305,8 +300,40 @@ article{
     // transform: translate(0%,-20%);
 }
 
-.wk.color-10:before {
-    background-color: #ffde00;
+.wk.color_1:before {
+    background-color: $color_1;
+}
+
+.wk.color_2:before {
+    background-color: $color_2;
+}
+
+.wk.color_3:before {
+    background-color: $color_3;
+}
+
+.wk.color_4:before {
+    background-color: $color_4;
+}
+
+.wk.color_5:before {
+    background-color: $color_5;
+}
+
+.wk.color_6:before {
+    background-color: $color_6;
+}
+
+.wk.color_7:before {
+    background-color: $color_7;
+}
+
+.wk.color_8:before {
+    background-color: $color_8;
+}
+
+.wk.color_9:before {
+    background-color: $color_9;
 }
 
 .headline{
