--- a/app/styles/modules/_links.scss
+++ b/app/styles/modules/_links.scss
@@ -1,16 +1,16 @@
 .project-layout{
   position: relative;
   width: 100%;
-  height: 600px;//calc(100vh - 0.5rem);
-  background-color: #000;
+  height: calc(100vw/1.777777);
+  background-color: $color_0;
   z-index: 33;
 }
 
 .project-overlay{
   position: absolute;
   width: 100%;
-  height: calc(100vh - 1.0rem);
-  background-color: #000;
+  height: 90vh;
+  background-color: $color_0;
   margin-left: 0rem;
   margin-right: 0rem;
   z-index: 35;
@@ -18,6 +18,31 @@
 
 .project-description{
   position: relative;
-  background-color: $black;
+  background-color: $color_0;
+  color: $white;
   height: 100%;
+
+  .image{
+    width: 100%;
+    height: auto;
+    min-width: 100%;
+  }
+
+  .circle{
+    margin-top: 2rem;
+    margin-bottom: 20%;
+    z-index: 101;
+  }
+}
+
+
+.header{
+  position: absolute;;
+  // background-color: $color_6;
+  width: 100%;
+  // margin: 1rem,1rem,1rem,1rem;
+  @include use-normal-font($extraBold, 400, 10.25rem, 0, rgb(255, 255, 255));
+  text-align: center;
+  letter-spacing: 20px;
+  z-index: 100;
 }
