--- a/app/styles/partials/_colors.scss
+++ b/app/styles/partials/_colors.scss
@@ -2,21 +2,19 @@ $black: #000;
 $white: #fff;
 
 $primary: #ECEFF1;
-// $secondary: #E6E6E6;
 $secondary: #607D8B;
 
 $color_0: #CFD8DC;
-
 $color_1: #E0F2F1;
-$color_2: #B2DFDB;
-$color_3: #80CBC4;
-$color_4: #4DB6AC;
-$color_5: #26A69A;
-$color_6: #009688;
-$color_7: #00897B;
-$color_8: #00796B;
-$color_9: #00695C;
+$color_2: #CDEAE8;
+$color_3: #BBE3DF;
+$color_4: #A8DBD7;
+$color_5: #96D4CE;
+$color_6: #84CCC5;
+$color_7: #71C5BD;
+$color_8: #5FBDB4;
+$color_9: #4DB6AC;
 
 .color_0{
- background-color: $color_0; 
+ background-color: $color_0;
 }
