--- a/app/styles/modules/_links.scss
+++ b/app/styles/modules/_links.scss
@@ -1,19 +1,26 @@
 .project-layout{
   position: relative;
   width: 100%;
-  height: calc(100vw/1.777777);
-  background-color: $color_0;
+  height: calc((100vw/1.777777)/1.3);
+  @include breakpoint(medium down) {
+    height: calc((100vw/1.777777)/1);
+  }
+  background-color: $black;
   z-index: 33;
 }
 
 .project-overlay{
-  position: absolute;
+  // position: absolute;
   width: 100%;
-  height: 90vh;
-  background-color: $color_0;
-  margin-left: 0rem;
-  margin-right: 0rem;
-  z-index: 35;
+  height: 3rem;
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  background: $black;
 }
 
 .project-description{
@@ -37,7 +44,7 @@
 
 
 .header{
-  position: absolute;;
+  position: absolute;
   // background-color: $color_6;
   width: 100%;
   // margin: 1rem,1rem,1rem,1rem;
