--- a/app/styles/partials/_constants.scss
+++ b/app/styles/partials/_constants.scss
@@ -4,6 +4,10 @@ html body {
   padding: 0;
   @extend %full-size;
 }
+body:after{
+    position:absolute; width:0; height:0; overflow:hidden; z-index:-1;
+    content: url(../images/logoNegative.png);
+}
 
 body{
   width: 100%;
