--- a/app/styles/modules/_links.scss
+++ b/app/styles/modules/_links.scss
@@ -6,21 +6,20 @@
     height: calc((100vw/1.777777)/1);
   }
   background-color: $black;
-  z-index: 33;
+  z-index: 1;
 }
 
 .project-overlay{
   // position: absolute;
   width: 100%;
-  height: 3rem;
+  height: 100%;
   display: block;
   position: absolute;
-  top: 0;
   right: 0;
-  bottom: 0;
   left: 0;
   margin: auto;
   background: $black;
+  z-index: 2;
 }
 
 .project-description{
@@ -28,6 +27,7 @@
   background-color: $color_0;
   color: $white;
   height: 100%;
+  z-index: 10;
 
   .image{
     width: 100%;
