--- a/app/styles/modules/_links.scss
+++ b/app/styles/modules/_links.scss
@@ -3,9 +3,9 @@
   width: 100%;
   height: calc((100vw/1.777777)/1.3);
   @include breakpoint(medium down) {
-    height: calc((100vw/1.777777)/1);
+    height: calc((100vw/1.777777)*2);
   }
-  background-color: $black;
+  background-color: $color_2;
   z-index: 1;
 }
 
@@ -18,7 +18,7 @@
   right: 0;
   left: 0;
   margin: auto;
-  background: $black;
+  background: $color_2;
   z-index: 2;
 }
 
