--- a/app/styles/modules/_links.scss
+++ b/app/styles/modules/_links.scss
@@ -1,10 +1,10 @@
 .project-layout{
   position: relative;
   width: 100%;
-  height: calc((100vw/1.777777)/1.3);
-  @include breakpoint(medium down) {
-    height: calc((100vw/1.777777)*2);
-  }
+  height: calc((100vw/1.777777)/1.3;
+  // @include breakpoint(medium down) {
+  //   height: calc((100vw/1.777777)*2);
+  // }
   background-color: $color_2;
   z-index: 1;
 }
