--- a/app/styles/modules/_links.scss
+++ b/app/styles/modules/_links.scss
@@ -1,7 +1,8 @@
 .project-layout{
   position: relative;
   width: 100%;
-  height: calc((100%-180px));
+  height: calc(100% - 180px);
+  // height: -moz-calc((100%-180px));
   overflow: hidden;
   background-color: $color_2;
   z-index: 1;
@@ -24,6 +25,29 @@
   width: 100%;
   height: 100vh;
   background-size: contain;
+}
+.project-text{
+  color: $black;
+
+}
+.image-loader {
+    // padding-top: 1rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 12px;
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    min-height: calc(100%/1.7777777);
+    color: #797979;
+    // line-height: 400px;
+    background-color: #f8f8f8;
+    overflow: hidden;
+    text-align: center;
+}
+
+.image-loader-info {
+    // padding-top: 1rem;
 }
 
 canvas{
@@ -76,8 +100,8 @@ canvas{
     width: 100%;
     height: auto;
     min-width: 100%;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    opacity: 1;
+    transition: all 2s linear;
   }
 
   .circle{
@@ -85,6 +109,13 @@ canvas{
     margin-bottom: 20%;
     z-index: 101;
   }
+}
+
+.project-section{
+  width: 100%;
+  height: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 
