--- a/app/styles/partials/_colors.scss
+++ b/app/styles/partials/_colors.scss
@@ -2,7 +2,7 @@ $black: #000;
 $white: #fff;
 
 $primary: #ECEFF1;
-$secondary: #607D8B;
+$secondary: #B0BEC5;
 
 $color_0: #CFD8DC;
 $color_1: #E0F2F1;
