--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -40,8 +40,8 @@
 .contact{
   position: relative;
   width: 100%;
-  height: 100rem;
-  background-color: $primary;
+  height: 15rem;
+  background-color: $color_0;
 }
 
 .scroll{
