--- a/app/styles/modules/_work.scss
+++ b/app/styles/modules/_work.scss
@@ -28,23 +28,21 @@
   }
 
   .left{
-    position: relative;
+    position: absolute;
     width: 1rem;
-    height: 20rem;
-    background: #FFFFFF;
-    left: -1rem;
-    top: -5rem;
-    z-index: 10;
+    height: calc(100% + 8.5rem);
+    background: $secondary;
+    z-index: 1;
     float: left;
   }
 
   .right{
     position: absolute;
     width: 1rem;
-    height: 120%;
-    background: #FFF;
+    top: -7.5rem;
+    height: calc(100% + 8.5rem);
+    background: $primary;
     right: -1rem;
-    top: -10rem;
     z-index: 10;
   }
 }
@@ -62,7 +60,7 @@
   transition: transform 1.4s cubic-bezier(.77,0,.175,1).1s;
 }
 
-//
+
 .work::after{
   content: "";
   background-color: $secondary;
