--- a/app/styles/modules/_about.scss
+++ b/app/styles/modules/_about.scss
@@ -1,7 +1,7 @@
 .about{
   position: relative;;
   width: 100%;
-  height: calc(100vh - 1rem);
+  height: calc(100vh - 2rem);
   overflow: hidden;
   background-color: $white;
   color: $white;
@@ -11,14 +11,16 @@
 }
 
 .aboutPic{
-  margin-top: calc(15% + 1rem);
+  margin-top: calc(10% + 1rem);
   position:relative;
   background-image: url(../images/test2.jpg);
   background-repeat: no-repeat;
   width: 100%;
-  height: 50vh;
+  height: 0;
   background-size: contain;
-  background-position:center
+  background-position:center;
+  padding-top: 60%;
+
 }
 
 .aboutTxt{
@@ -26,6 +28,10 @@
   padding-left: 10%;
   padding-right: 5%;
   padding-top: 15%;
+  font-size: modular-scale(1, 1rem, 1.234)!important;
+  @include breakpoint(small down) {
+    font-size: modular-scale(0, 1rem, 1.234)!important;
+  }
 }
 
 
@@ -59,7 +65,7 @@
 .list{
   text-align: center;
   @include use-normal-font($light, 400, 0, 0, rgb(0, 0, 0));
-  font-size: modular-scale(1, 0.5em, 1.234)!important;
+  font-size: modular-scale(1, 0.7rem, 1.234)!important;
 }
 
 
@@ -73,4 +79,16 @@
   position: relative;;
   display: inherit;;
   transform: translate(0,0);
+}
+
+.about-footer {
+  margin-top: 4rem;
+  p{
+    margin-top: 1rem;
+    text-align: center;
+    color: #000;
+    font-size: 1rem !important;
+    letter-spacing: 2px;
+    padding-bottom: 1rem;
+  }
 }
