--- a/app/styles/modules/_project.scss
+++ b/app/styles/modules/_project.scss
@@ -31,10 +31,10 @@ article{
   pointer-events: auto;
 }
 
-.cont-list-work {
+.the-project-list {
     clear: both;
-    padding-top: 3rem;
-    padding-bottom: 10rem;
+    padding-top: 5rem;
+    padding-bottom: 15rem;
     position: relative;
     z-index: 1;
 
@@ -120,20 +120,14 @@ article{
         float: left;
         clear: none;
         width: 100%;
-        margin-left: 85%;
         position: absolute;
         height: 100%;
         top: 0;
         left: 0;
+        text-align: right;
         // z-index: 20;
         line-height: 1;
-
-        .year {
-          display: block;
-          position: absolute;
-          // top: 50%;
-          transition: all .3s cubic-bezier(.615,.19,.305,.91);
-      }
+        transition: all .3s cubic-bezier(.615,.19,.305,.91);
 
       .arrow-section {
           width: 100%;
@@ -153,7 +147,7 @@ article{
         overflow: hidden;
         z-index: 21;
         transition: all .3s cubic-bezier(.615,.19,.305,.91);
-        .cont-info-work-detail {
+        .work-details {
             position: absolute;
             top: 25%;
             @include breakpoint(medium down) {
@@ -190,6 +184,7 @@ article{
                   width: 100%;
                   margin-left: 0;
                   margin-right: 4.56853%;
+                  transition-delay: 1s;
 
                   @include breakpoint(small down) {
                     display: none;
@@ -241,13 +236,27 @@ article{
   margin-left: 45%;
   margin-top: 1rem;
 
+  h6{
+    letter-spacing: 5px;
+    color: #FFF;
+  }
+
+  @include breakpoint(small down) {
+    margin-left: 20%!important;
+    width: 72.5%;
+    font-size: modular-scale(0, 0.8rem, 1.234)!important;
+    h6{
+      font-size: modular-scale(0, 0.8rem, 1.234)!important;
+      letter-spacing: 2px;
+    }
+  }
+
   @include breakpoint(medium down) {
     margin-left: 25%;
   }
 
     .mono-title {
         position: absolute;
-        // bottom: 35px;
         left: -3rem;
         line-height: 1;
     }
@@ -265,7 +274,7 @@ article{
   float: left;
   clear: none;
   width: 100%;
-  margin-left: 6%;
+  margin-left: 7%;
   margin-right: 3%;
   transition: all .3s cubic-bezier(.615,.19,.305,.91);
   transform: translate(0, -130%);
@@ -277,11 +286,15 @@ article{
     font-size: modular-scale(4, 1rem, 1.234)!important;
   }
 
-  // @include breakpoint(medium) {
-  //   margin-left: 0;
-  //   text-align: center;
-  //   font-size: modular-scale(5, 1rem, 1.234)!important;
-  // }
+  @include breakpoint(74.9375em) {
+    margin-left: 10%!important;
+    font-size: modular-scale(6, 1rem, 1.234)!important;
+  }
+
+  @include breakpoint(xlarge) {
+    margin-left: 3%;
+    font-size: modular-scale(6, 1rem, 1.234)!important;
+  }
 
   @include breakpoint(small down) {
     margin-left: 0;
@@ -378,8 +391,28 @@ article{
   float: right;
   z-index: 2;
   margin-right: 10%;
-  margin-bottom: 4rem;
+  margin-bottom: 4%;
   margin-top: 3rem;
-  @include use-normal-font($extraBold, 400, 0, 0, rgb(0, 0, 0));
-  border-bottom: 6px solid rgba(255, 255, 255, 0.4);
+  h3{
+    color: #FFF;
+  }
+  @include use-normal-font($extraBold, 400, 0, 20px, rgb(255, 255, 255));
+  border-bottom: 6px solid rgba(255, 255, 255, 0.8);
+  @include breakpoint(small down) {
+    text-align: center;
+    letter-spacing: 8px;
+    margin-right: 2.5%;
+    border-bottom: 4px solid rgba(255, 255, 255, 0.8);
+    h3{
+      font-size: modular-scale(3, 1rem, 1.234)!important;
+    }
+  }
+}
+
+.footer p{
+  text-align: center;
+  color: #FFF;
+  font-size: modular-scale(0, 1rem, 1.234)!important;
+  letter-spacing: 5px;
+  padding-bottom: 1rem;
 }
