--- a/app/styles/partials/_colors.scss
+++ b/app/styles/partials/_colors.scss
@@ -17,4 +17,10 @@ $color_9: #4DB6AC;
 
 .color_0{
  background-color: $color_0;
+ background-image: url(../images/bg_negative2.png);
+ background-repeat: no-repeat;
+ background-position:50% 50%;
+ background-size: cover;
+ position: relative;
+ z-index: -2;
 }
