--- a/app/styles/modules/_project.scss
+++ b/app/styles/modules/_project.scss
@@ -68,9 +68,9 @@ article{
         height: 100%;
         float: left;
         clear: none;
-        width: 59%;
+        width: 50%;
         margin-left: 41%;
-        margin-right: 3%;
+        // margin-right: 3%;
         -webkit-transition: all .3s cubic-bezier(.615,.19,.305,.91);
         transition: all .3s cubic-bezier(.615,.19,.305,.91);
         -webkit-transition-timing-function: cubic-bezier(.615,.19,.305,.91);
