--- a/app/styles/modules/_about.scss
+++ b/app/styles/modules/_about.scss
@@ -1,17 +1,26 @@
 .about{
   position: relative;;
   width: 100%;
+  @include breakpoint(medium down) {
+    height: calc(100vh - 1rem);
+  };
   height: calc(100vh - 2rem);
   overflow: hidden;
   background-color: $white;
   color: $white;
   @include use-normal-font($light, 400, 0, 0, rgb(0, 0, 0));
-  font-size: modular-scale(4, 0.5em, 1.234)!important;
+  // font-size: modular-scale(2, 0.5em, 1.234)!important;
+  // text-transform: uppercase;
 
 }
 
+.about-year{
+  // text-decoration: underline;
+  font-size: modular-scale(0, 0.5rem, 1.234)!important;
+}
+
 .aboutPic{
-  margin-top: calc(10% + 1rem);
+  margin-top: calc(5% + 1rem);
   position:relative;
   background-image: url(../images/test2.jpg);
   background-repeat: no-repeat;
@@ -24,48 +33,78 @@
 }
 
 .aboutTxt{
+  text-align: justify;
   // //  padding-left: calc(100vh - 1rem);
-  padding-left: 10%;
-  padding-right: 5%;
-  padding-top: 15%;
-  font-size: modular-scale(1, 1rem, 1.234)!important;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  // padding-right: 5%;
+  padding-top: 2rem;
+  font-size: modular-scale(4, 0.5rem, 1.234)!important;
   @include breakpoint(small down) {
-    font-size: modular-scale(0, 1rem, 1.234)!important;
+    font-size: modular-scale(2, 0.5rem, 1.234)!important;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
+
+  @include breakpoint(medium) {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    font-size: modular-scale(3, 0.5rem, 1.234)!important;
+  }
+}
+
+.line-fix{
+  opacity: 0;
 }
 
 
 .burn{
   position: relative;
-  width: 10rem;
+  width: 12rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.4);
   text-align: center;
   display: inline-block;
+  @include breakpoint(medium down) {
+    width: 8rem;
+  };
 }
 
 
 .like{
   position: relative;
-  width: 10rem;
+  width: 12rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.4);
   display: inline-block;
   text-align: center;
+  @include breakpoint(medium down) {
+    width: 8rem;
+  };
 }
 
 
 
 .offer{
   position: relative;
-  width: 10rem;
+  width: 12rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.4);
   display: inline-block;
   text-align: center;
+  @include breakpoint(medium down) {
+    width: 8rem;
+  };
 }
 
 .list{
   text-align: center;
   @include use-normal-font($light, 400, 0, 0, rgb(0, 0, 0));
-  font-size: modular-scale(1, 0.7rem, 1.234)!important;
+  font-size: modular-scale(3, 0.5rem, 1.234)!important;
+  @include breakpoint(small down) {
+    font-size: modular-scale(1, 0.5rem, 1.234)!important;
+  }
+
+  @include breakpoint(medium) {
+    font-size: modular-scale(0, 0.5rem, 1.234)!important;
+  }
 }
 
 
@@ -90,5 +129,26 @@
     font-size: 1rem !important;
     letter-spacing: 2px;
     padding-bottom: 1rem;
+    font-size: modular-scale(4, 0.5rem, 1.234)!important;
+    @include breakpoint(small down) {
+      font-size: modular-scale(2, 0.5rem, 1.234)!important;
+    }
+
+    @include breakpoint(medium) {
+      font-size: modular-scale(3, 0.5rem, 1.234)!important;
+    }
+  }
+
+  div{
+    text-align: center;
+    @include use-normal-font($light, 400, 0, 0, rgb(0, 0, 0));
+    font-size: modular-scale(3, 0.5rem, 1.234)!important;
+    @include breakpoint(small down) {
+      font-size: modular-scale(1, 0.5rem, 1.234)!important;
+    }
+
+    @include breakpoint(medium) {
+      font-size: modular-scale(0, 0.5rem, 1.234)!important;
+    }
   }
 }
