--- a/app/styles/partials/_transitions.scss
+++ b/app/styles/partials/_transitions.scss
@@ -26,11 +26,21 @@
 }
 
 .wfade-transition {
-    transition: all .5s ease;
+    transition: all 0.5s ease;
     opacity: 1;
+    transform: scale(1.0);
+      transform: translate3d(0, 0%, 0);
 }
-.wfade-enter, .wfade-leave {
+.wfade-enter{
+  opacity: 0;
+  transform: scale(0);
+    transform: translate3d(0, 40%, 0);
+}
+
+.wfade-leave {
     opacity: 0;
+    transform: scale(3.5);
+    transform: translate3d(0, -40%, 0);
 }
 
 
