--- a/app/styles/modules/_about.scss
+++ b/app/styles/modules/_about.scss
@@ -2,16 +2,40 @@
   position: relative;;
   width: 100%;
   @include breakpoint(medium down) {
-    height: calc(100vh - 1rem);
+    height: calc(100% - 1rem);
   };
-  height: calc(100vh - 2rem);
-  overflow: hidden;
+  height: calc(100% - 2rem);
+  // overflow: hidden;
   background-color: $white;
   color: $white;
   @include use-normal-font($light, 400, 0, 0, rgb(0, 0, 0));
   // font-size: modular-scale(2, 0.5em, 1.234)!important;
   // text-transform: uppercase;
 
+}
+.text-stuff{
+  width: 60%;
+  max-width: 650px;
+  margin: auto auto 5.5rem;
+  color: #7C7C7C;
+  letter-spacing: 6px;
+  margin-top: 5rem;
+  // @include use-normal-font($light, 400, 0, 0, rgb(0, 0, 0));
+  font-size: modular-scale(7, 0.5rem, 1.234)!important;
+  @include breakpoint(small down) {
+    font-size: modular-scale(2, 0.5rem, 1.234)!important;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    width: 100%;
+    line-height: 1.5;
+    letter-spacing: 2px;
+  }
+
+  @include breakpoint(medium down) {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    font-size: modular-scale(4, 0.5rem, 1.234)!important;
+  }
 }
 
 .about-year{
@@ -33,78 +57,43 @@
 }
 
 .aboutTxt{
-  text-align: justify;
+  text-align: center;
   // //  padding-left: calc(100vh - 1rem);
-  padding-left: 2rem;
-  padding-right: 2rem;
+  // padding-left: 2rem;
+  // padding-right: 2rem;
   // padding-right: 5%;
-  padding-top: 2rem;
-  font-size: modular-scale(4, 0.5rem, 1.234)!important;
-  @include breakpoint(small down) {
-    font-size: modular-scale(2, 0.5rem, 1.234)!important;
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  @include breakpoint(medium) {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    font-size: modular-scale(3, 0.5rem, 1.234)!important;
-  }
+  // padding-top: 2rem;
 }
 
 .line-fix{
   opacity: 0;
 }
 
-
-.burn{
-  position: relative;
-  width: 12rem;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
-  text-align: center;
-  display: inline-block;
-  @include breakpoint(medium down) {
-    width: 8rem;
-  };
+.extra{
+  margin-top: 4rem;
+  @include breakpoint(medium) {
+      font-size: modular-scale(3, 0.5rem, 1.234)!important;
+  }
 }
 
 
-.like{
+.spanner{
   position: relative;
-  width: 12rem;
+  width: 17rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.4);
-  display: inline-block;
   text-align: center;
-  @include breakpoint(medium down) {
-    width: 8rem;
-  };
-}
-
-
-
-.offer{
-  position: relative;
-  width: 12rem;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+  color: #D2691E;
   display: inline-block;
-  text-align: center;
   @include breakpoint(medium down) {
-    width: 8rem;
+    width: 10rem;
   };
 }
 
 .list{
   text-align: center;
-  @include use-normal-font($light, 400, 0, 0, rgb(0, 0, 0));
-  font-size: modular-scale(3, 0.5rem, 1.234)!important;
-  @include breakpoint(small down) {
-    font-size: modular-scale(1, 0.5rem, 1.234)!important;
-  }
-
-  @include breakpoint(medium) {
-    font-size: modular-scale(0, 0.5rem, 1.234)!important;
-  }
+  margin-top: 6rem;
+  letter-spacing: 0;
+  line-height: 1.5;
 }
 
 
@@ -121,7 +110,6 @@
 }
 
 .about-footer {
-  margin-top: 4rem;
   p{
     margin-top: 1rem;
     text-align: center;
