--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -7,6 +7,15 @@
   top: 2rem;
   pointer-events: none;
 
+  span{
+    @include breakpoint(medium down) {
+      background-color: white;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      text-transform: uppercase;
+    }
+  }
+
   *{
     -webkit-transition: opacity 100ms ease;
     transition: opacity 100ms ease;
@@ -23,11 +32,10 @@
       text-align: center;
       float: none;;
       .nav-line{
-        opacity: 0;
+        opacity: 0!important;
       }
     }
     @include use-normal-font($extraBold, 400, 0.8rem, 4px, rgb(0, 0, 0));
-    // text-decoration: underline;
     color: #000;
     a{
       pointer-events: auto;
@@ -35,22 +43,22 @@
       margin-top: 5px;
       position: relative;
       color: #000;
-      background-blend-mode: color-dodge;
-      // background-color: white;
-      // padding-right: 0.5rem;
+      @include breakpoint(xlarge up) {
+        font-size: modular-scale(1, 0.7rem, 1.234)!important;
+      }
     }
 
     a:hover {
       span{
-        padding-right: 1rem
+        padding-right: 1rem;
+        @include breakpoint(medium down) {
+          padding-right: 1rem;
+        }
       }
       .nav-line{
         transform: scaleX(1);
-        // transform: translateX(0%);
         transition-delay: 0.1s;
         opacity: 1;
-        // right: 0;
-        // transform-origin: right center;
       }
     }
 
@@ -59,52 +67,12 @@
   .nav-links.active{
     a{
       color: #FFF;
-
       .nav-line{
         background-color: #FFF;
       }
     }
   }
 
-
-
-
-  ul{
-    padding:2rem;
-  }
-  li{
-    list-style:none;
-    width:100%;
-    height:4px;
-    background:#000;
-    margin-bottom:6px;
-    position:relative;
-  }
-  li:first-child{
-    -webkit-transform:rotate(0deg);
-    transform:rotate(0deg);
-    top:0px;
-  }
-  li:last-child{
-    -webkit-transform:rotate(0deg);
-    transform:rotate(0deg);
-    top:0px;
-  }
-  .open li{
-    opacity:0;
-  }
-  .open li:first-child{
-    -webkit-transform:rotate(45deg);
-    transform:rotate(45deg);
-    top:12px;
-    opacity:1;
-  }
-  .open li:last-child{
-    -webkit-transform:rotate(-45deg);
-    transform:rotate(-45deg);
-    top:-12px;
-    opacity:1;
-  }
 }
 
 .nav-line{
