--- a/app/styles/partials/_transitions.scss
+++ b/app/styles/partials/_transitions.scss
@@ -62,6 +62,7 @@
 .slideUp-transition {
   transition: transform 2.4s cubic-bezier(.77,0,.175,1).1s;
   transform: translate3d(0, 0%, 0);
+  transform: matrix(1, 0, 0, 1, 0, 0);
   transition-delay: 2s;
 }
 
