--- a/app/styles/partials/_transitions.scss
+++ b/app/styles/partials/_transitions.scss
@@ -47,7 +47,8 @@
 
 .slide-transition {
   transition: transform 2.4s cubic-bezier(.77,0,.175,1).1s;
-  transform: translate3d(0, 0%, 0);
+  transform: matrix(1, 0, 0, 1, 0, 0);
+  // transform: translate3d(0, 0, 0);
 }
 
 .slide-enter{
@@ -89,8 +90,10 @@
 
 .b-lazy {
    opacity:0;
+   transform: translate3d(0, 20%, 0);
 }
 .b-loaded {
-  transition: all 2.4s cubic-bezier(.77,0,.175,1).1s;
-   opacity:1;
+  transition: all 1.4s cubic-bezier(.77,0,.175,1).1s;
+  opacity:1;
+  transform: translate3d(0, 0%, 0);
 }
