--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -62,6 +62,20 @@
       }
     }
 
+    .nav-line{
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: -1px;
+      height: 2px;
+      background-color: #000;
+      -webkit-transform: scaleX(0);
+      transform: scaleX(0);
+      transform-origin: right center;
+      transition: transform .4s cubic-bezier(.19,1,.22,1);
+    }
+
   }
 
   .nav-links.active{
@@ -73,20 +87,57 @@
     }
   }
 
-}
+  .nav-links-footer{
+    float: right;
+    margin-right: 1rem;
+    margin-bottom: 4rem;
+    text-align: right;
+    @include breakpoint(medium down) {
+      margin-right: 0;
+      text-align: center;
+      float: none;;
+      .nav-line{
+        opacity: 0!important;
+      }
+    }
+    @include use-normal-font($extraBold, 400, 0.8rem, 4px, rgb(0, 0, 0));
+    color: #000;
+    a{
+      pointer-events: auto;
+      display: block;
+      margin-top: 5px;
+      position: relative;
+      color: #000;
+      @include breakpoint(xlarge up) {
+        font-size: modular-scale(1, 0.7rem, 1.234)!important;
+      }
+    }
 
-.nav-line{
-  display: block;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: -1px;
-  height: 2px;
-  background-color: #000;
-  -webkit-transform: scaleX(0);
-  transform: scaleX(0);
-  transform-origin: right center;
-  transition: transform .4s cubic-bezier(.19,1,.22,1);
+    a:hover {
+      span{
+        padding-right: 1rem;
+        @include breakpoint(medium down) {
+          padding-right: 1rem;
+        }
+      }
+      .nav-line{
+        transform: scaleX(1);
+        transition-delay: 0.1s;
+        opacity: 1;
+      }
+    }
+
+  }
+
+  .nav-links-footer.active{
+    a{
+      color: #FFF;
+      .nav-line{
+        background-color: #FFF;
+      }
+    }
+  }
+
 }
 
 
