pushing content to the page

--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -18,17 +18,13 @@
   // @extend %full-size;
   position:relative;
   height: 100%;
-  // border-color: $white;
-  // border-style: solid;
-  // // border-bottom: 0;
-  // border-width: 0.5rem;
   padding-left: 0.5rem;
   padding-top: 0.5rem;
   padding-right: 0.5rem;
   padding-bottom: 0.5rem;
   background-color: $primary;
 
-  @media #{$medium-up} {
+  @include breakpoint(medium up) {
     padding-left: 1rem;
     padding-top: 1rem;
     padding-right: 1rem;
