--- a/app/styles/modules/_links.scss
+++ b/app/styles/modules/_links.scss
@@ -40,9 +40,49 @@
   height: 100vh;
   background-size: contain;
 }
+
 .project-text{
   color: $black;
+  font-size: modular-scale(2, 0.5rem, 1.234)!important;
+  hyphens: auto;
 
+  @include breakpoint(medium down) {
+    font-size: modular-scale(1, 0.5rem, 1.234)!important;
+    h6 {
+      font-size: modular-scale(1, 0.5rem, 1.234)!important;
+    }
+    p{
+      font-size: modular-scale(1, 0.5rem, 1.234)!important;
+    }
+    a{
+      font-size: modular-scale(1, 0.5rem, 1.234)!important;
+    }
+  }
+
+  h6{
+    @include use-normal-font($extraBold, 400, 1rem, 0, #000);
+    font-size: modular-scale(2, 0.5rem, 1.234)!important;
+  }
+
+  a{
+    // font-size: modular-scale(2, 0.5rem, 1.234)!important;
+    color: $black;
+    text-decoration: underline;
+  }
+
+
+  @include breakpoint(large up) {
+    font-size: modular-scale(3, 0.5rem, 1.234)!important;
+    h6 {
+      font-size: modular-scale(4, 0.5rem, 1.234)!important;
+    }
+    p{
+      font-size: modular-scale(3, 0.5rem, 1.234)!important;
+    }
+    a{
+      font-size: modular-scale(3, 0.5rem, 1.234)!important;
+    }
+  }
 }
 
 canvas{
@@ -52,9 +92,9 @@ canvas{
 }
 
 .project-header{
-  padding-top: 5rem;
+  padding-top: 6rem;
   display: block;
-  height: 15rem;
+  height: 100%;
   position: relative;;
   bottom: 0;
   right: 0;
@@ -66,7 +106,7 @@ canvas{
   font-size: modular-scale(2, 0.5rem, 1.234)!important;
 
   @include breakpoint(medium down) {
-    padding-top: 2.5rem;
+    padding-top: 3rem;
     font-size: modular-scale(1, 0.5rem, 1.234)!important;
     h3{
       font-size: modular-scale(1, 1rem, 1.234)!important;
@@ -76,8 +116,32 @@ canvas{
     }
   }
 
+
+  @include breakpoint(xlarge) {
+    padding-top: 6rem;
+    font-size: modular-scale(4, 0.5rem, 1.234)!important;
+    h3{
+      font-size: modular-scale(4, 1rem, 1.234)!important;
+    }
+    p{
+      font-size: modular-scale(4, 0.5rem, 1.234)!important;
+    }
+  }
+
+  @include breakpoint(large) {
+    padding-top: 6rem;
+    font-size: modular-scale(3, 0.5rem, 1.234)!important;
+    h3{
+      font-size: modular-scale(3, 1rem, 1.234)!important;
+    }
+    p{
+      font-size: modular-scale(3, 0.5rem, 1.234)!important;
+    }
+  }
+
+
   h3{
-    @include use-normal-font($extraBold, 400, 2rem, 0, #797979);
+    @include use-normal-font($extraBold, 400, 2rem, 0, #000);
   }
 }
 
@@ -101,6 +165,12 @@ canvas{
   color: $white;
   height: 100%;
   z-index: 10;
+
+  padding-top: 10rem;
+
+  @include breakpoint(medium down) {
+    padding-top: 1.5rem;
+  }
 
   img{
     display: block;
