--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -4,7 +4,7 @@
   width: 100%;
   white-space: nowrap;
   color: #fff;
-  top: 2rem;
+  padding-top: 0.5rem;
   pointer-events: none;
 
   span{
@@ -88,80 +88,49 @@
   }
 
   .nav-links-footer{
-    float: right;
-    margin-right: 1rem;
+    // float: right;
+    // margin-right: 1rem;
     margin-bottom: 4rem;
-    text-align: right;
+    text-align: center;
     @include breakpoint(medium down) {
       margin-right: 0;
-      text-align: center;
       float: none;;
+      font-size: modular-scale(0, 0.7rem, 1.234)!important;
       .nav-line{
         opacity: 0!important;
       }
     }
     @include use-normal-font($extraBold, 400, 0.8rem, 4px, rgb(0, 0, 0));
-    color: #000;
     a{
+      // background-color: #000;
       pointer-events: auto;
-      display: block;
+      text-decoration: none;
+      display: inline-block;
       margin-top: 5px;
       position: relative;
       color: #000;
       @include breakpoint(xlarge up) {
         font-size: modular-scale(1, 0.7rem, 1.234)!important;
       }
-    }
-
-    a:hover {
-      span{
-        padding-right: 1rem;
-        @include breakpoint(medium down) {
-          padding-right: 1rem;
-        }
+      &:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #000;
+        visibility: hidden;
+        transform: scaleX(0);
+        transition: all 0.3s ease-in-out 0s;
       }
-      .nav-line{
+
+      &:hover:before {
+        visibility: visible;
         transform: scaleX(1);
-        transition-delay: 0.1s;
-        opacity: 1;
       }
     }
 
-  }
-
-  .nav-links-footer.active{
-    a{
-      color: #FFF;
-      .nav-line{
-        background-color: #FFF;
-      }
-    }
   }
 
 }
-
-
-
-// .slide {
-//   transform: translate3d(0, -100%, 0);
-//   position: absolute;
-//   width: 100%;
-//   height: 100%;
-//   overflow: hidden;
-//   background-color: rgba(255, 255, 255, 1);;
-//   z-index: 33;
-//   transition: all 300ms ease;
-//   text-align: center;
-// }
-//
-//
-// .trans{
-//   transform: translate3d(0, 0%, 0);
-//   position: absolute;
-//   width: 100%;
-//   height: 100%;
-//   overflow: hidden;
-//   background-color: rgba(255, 255, 255, 0.9);;
-//   z-index: 33;
-//   transition: all 300ms ease;
-// }
