--- a/app/styles/partials/_constants.scss
+++ b/app/styles/partials/_constants.scss
@@ -3,6 +3,11 @@ html body {
   margin: 0;
   padding: 0;
   @extend %full-size;
+  height: calc(100%  - 0.5rem)!important;
+  @include breakpoint(medium up) {
+    height: calc(100% - 1rem)!important;
+  }
+
 }
 body:after{
     position:absolute; width:0; height:0; overflow:hidden; z-index:-1;
@@ -25,11 +30,11 @@ html{
 
 html, body, p{
 	-webkit-font-smoothing: antialiased;
-	margin: 0;
+	// margin: 0;
 	padding: 0;
-	width: 100%;
-	height: 100%;
-  @include use-normal-font($regular, 400, 1rem, 2px, rgb(255, 255, 255));
+  font-family: "OpenSans-Regular", sans-serif;
+  letter-spacing: 2px;
+  // @include use-normal-font($regular, 400, 1rem, 2px, rgb(255, 255, 255));
 }
 
 ul, li {
