--- a/app/styles/modules/_loader.scss
+++ b/app/styles/modules/_loader.scss
@@ -32,6 +32,7 @@
     background-color: white;
     height: 1rem;
     width: 0%;
+    transition: all 1.0s cubic-bezier(.615,.19,.305,.91);
   }
 
   .bar.complete {
